--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.streamingaudioplayer">
 
-    #Para poder leer las fotos del móvil
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
@@ -12,6 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.StreamingAudioPlayer">
+        <activity
+            android:name=".PublicPlaylistDetailsActivity"
+            android:exported="true" />
         <activity
             android:name=".PlayListDetailsActivity"
             android:exported="true" />
